fix(FoodDetails): change font-size, adjust spacing

--- a/src/pages/FoodDetails.module.scss
+++ b/src/pages/FoodDetails.module.scss
@@ -11,7 +11,6 @@
     justify-content: space-between;
 
     $font-size-large: 2rem;
-    $font-size-medium: 1.4rem;
     $font-size-small: 1.2rem;
 
     .details-image__container {
@@ -61,10 +60,10 @@
         display: flex;
         flex-direction: row;
         gap: 0.4rem;
+        font-size: $font-size-small;
 
         span:nth-child(1) {
             color: $color-main;
-            margin-right: 0.2rem;
         }
     }
 
@@ -73,7 +72,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        margin: 1.2rem 0 1rem 0;
+        margin: 1.2rem 0 2rem 0;
 
         .details-price {
             font-size: $font-size-large;
@@ -91,9 +90,7 @@
     .details-description {
         color: $color-gray;
         font-family: $main-font;
-        display: flex;
-        flex-direction: row;
-        gap: 0.4rem;
+        font-size: $font-size-small;
     }
 
     .add-to-cart-button {
